fix bugs; do work; terrible commit message
